Fix menu icon alignment

--- a/static/style5/_menu.scss
+++ b/static/style5/_menu.scss
@@ -110,6 +110,7 @@ ul.menu {
 			}
 
 			li.search_link img {
+				top: 2px;
 				@include transform(none);
 			}
 		}
